objects/LAT_BI_Fact_Contract__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BI_AN8_CUSTOMER__c</fullName>
        <label>AN8 CUSTOMER</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CD_CONTRACT__c</fullName>
        <label>CD CONTRACT</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CD_COUNTRY__c</fullName>
        <label>CD COUNTRY</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BI_CD_PRODUCT__c</fullName>
        <label>CD PRODUCT</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_ERROR_MESSAGE__c</fullName>
        <label>ERROR MESSAGE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_MONTH_YEAR__c</fullName>
        <label>MONTH YEAR</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_MONTH__c</fullName>
        <label>MONTH</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BI_QT_CONTRACT__c</fullName>
        <label>QT CONTRACT</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BI_QT_SELLOUT__c</fullName>
        <label>QT SELLIN</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BI_VL_CM_CONTRACT__c</fullName>
        <label>VL CM CONTRACT</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LAT_BI_VL_CM_REAL__c</fullName>
        <label>VL CM REAL</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BI_YEAR__c</fullName>
        <label>YEAR</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>LAT BI Fact Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Contratos</fullName>
        <columns>NAME</columns>
        <columns>LAT_BI_AN8_CUSTOMER__c</columns>
        <columns>LAT_BI_CD_CONTRACT__c</columns>
        <columns>LAT_BI_CD_PRODUCT__c</columns>
        <columns>LAT_BI_MONTH_YEAR__c</columns>
        <columns>LAT_BI_YEAR__c</columns>
        <columns>LAT_BI_MONTH__c</columns>
        <columns>LAT_BI_QT_CONTRACT__c</columns>
        <columns>LAT_BI_QT_SELLOUT__c</columns>
        <columns>LAT_BI_VL_CM_CONTRACT__c</columns>
        <columns>LAT_BI_VL_CM_REAL__c</columns>
        <columns>LAT_BI_ERROR_MESSAGE__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contratos</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Error</fullName>
        <columns>NAME</columns>
        <columns>LAT_BI_AN8_CUSTOMER__c</columns>
        <columns>LAT_BI_CD_CONTRACT__c</columns>
        <columns>LAT_BI_CD_PRODUCT__c</columns>
        <columns>LAT_BI_MONTH_YEAR__c</columns>
        <columns>LAT_BI_YEAR__c</columns>
        <columns>LAT_BI_MONTH__c</columns>
        <columns>LAT_BI_QT_CONTRACT__c</columns>
        <columns>LAT_BI_QT_SELLOUT__c</columns>
        <columns>LAT_BI_VL_CM_CONTRACT__c</columns>
        <columns>LAT_BI_VL_CM_REAL__c</columns>
        <columns>LAT_BI_ERROR_MESSAGE__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_BI_ERROR_MESSAGE__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Error</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Specific_Contract1</fullName>
        <columns>NAME</columns>
        <columns>LAT_BI_AN8_CUSTOMER__c</columns>
        <columns>LAT_BI_CD_CONTRACT__c</columns>
        <columns>LAT_BI_CD_PRODUCT__c</columns>
        <columns>LAT_BI_MONTH_YEAR__c</columns>
        <columns>LAT_BI_YEAR__c</columns>
        <columns>LAT_BI_MONTH__c</columns>
        <columns>LAT_BI_QT_CONTRACT__c</columns>
        <columns>LAT_BI_QT_SELLOUT__c</columns>
        <columns>LAT_BI_VL_CM_CONTRACT__c</columns>
        <columns>LAT_BI_VL_CM_REAL__c</columns>
        <columns>LAT_BI_ERROR_MESSAGE__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_BI_CD_CONTRACT__c</field>
            <operation>equals</operation>
            <value>CON-020979</value>
        </filters>
        <label>Specific Contract</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FC-{000000}</displayFormat>
        <label>LAT BI Fact Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT BI Fact Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>